--- a/src/index.css
+++ b/src/index.css
@@ -1,180 +1,25 @@
-/* fonts */
-
-@import url("https://rsms.me/inter/inter.css");
-html {
-  font-family: "Inter", sans-serif;
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
 }
 
-@supports (font-variation-settings: normal) {
-  html {
-    font-family: "Inter var", sans-serif;
-  }
+.shape-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
-/* body, and section */
-
-body {
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1;
-  background-color: #000;
-  color: #000000;
-  margin: auto;
-  max-width: 640px;
-  padding: 32px;
-  position: relative;
-}
-
-section {
-  display: center;
-  font-family: "Inter";
-  display: block;
-  margin-bottom: 30px;
-  line-height: 150%;
-}
-
-.cigar-box {
-  max-width: 320px;
-  margin-bottom: 100px ;
-  font-size: 12px;
-  color: #606060;
-}
-
-/* header, h1, h2, h3 */
-
-header {
-  white-space: nowrap;
-  display: block;
-  font-size: 16px;
-  margin-bottom: 30px;
-  margin-right: 10vh;
-}
-
-h1 {
-  font-family: "Inter";
-  font-size: 20px;
-}
-
-h2 {
-  font-family: "Inter";
-  font-size: 18px;
-}
-
-h3 {
-  font-family: "Inter";
-  font-size: 16px;
-}
-
-h6 {
-  font-family: "Inter";
-  font-size: 16px;
-  font-weight: 400px;
-}
-
-mark {
-  font-family: "Inter";
-  font-size: 14px;
-  display: inline;
-  border-radius: 4px;
-  padding: 1px 3px;
-  color: #444444;
-}
-
-.yellow {  
-  background: #FCEED5;
-}
-
-.blue {
-  background: #CCE4F8;
-}
-
-.red {
-  background: #FFCDD4;
-}
-
-.date {
-  font-size: 12px;
-}
-
-li {
-  list-style-type: dot;
-}
-
-small{
-  color: #606060;
-  font-size:12px;
-}
-
-/* footer */
-footer {
-  font-size: 12px;
-  text-align: center;
-  display: center
-  
-}
-
-/* border */
-
-hr.solid {
-  color: #d6d6d6;
-  border-style: solid;
-  border-width: 0.5px;
-}
-
-/* img */
-
-img {    
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    box-shadow: 0px 0px 12.5px rgba(0, 0, 0, 0.25);
-    border-radius: 2.5px;
-}
-
-/* Links */
-
-a {
-  font-family: "Inter";
-  text-decoration: underline;
-  cursor: pointer;
-  color: #606060;
-  display: inline;
-  border-radius: 4px;
-  padding: 1px 3px;
-}
-
-a:hover {
-  text-decoration: none;
-  color: #929292;
-}
-
-.header {
-  font-size: 12px;
-  margin-right: 6px;
-  color: #606060;
-  text-decoration: none;
-  border-radius: 0px;
-  padding: 0px 0px;
-}
-
-.footer {
-  font-size: 12px;
-  margin-right: 6px;
-  color: #606060;
-}
-
-/* Phone view */
-
-@media (max-width: 600px) {
-  img {
-    height: 95%;
-    margin-top: 10px;
-    width: 100%;
-    object-fit: scale-down;
-  }
-  
+.shape-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
+  width: 100%;
 }
