--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,11 @@ html {
 body {
   font-family: "Inter", sans-serif;
   background-color: #FFF4E8;
- 
+  font-size: 12px;
+}
+
+a {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #606060;
 }
