--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #FFF4E8;
+  background-color: #F7F7F7;
   font-size: 12px;
 }
 
